Fix RTL and complex script title in print preview header/footer.

Mac fixes is not there yet since RenderText does not support Mac for now.

BUG=108599
TEST=print preview pages in different languages


Review URL: https://chromiumcodereview.appspot.com/9111042

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@135750 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 1c4464ac557ad0e99dbd7fb13bdb1ca0ed1812cf